--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,4 +7,5 @@ drf-spectacular==0.29.0
 ultralytics==8.3.229
 pillow==12.0.0
 google-genai==1.51.0
-google-auth==2.43.0
+gunicorn==23.0.0
+psycopg2-binary==2.9.11
